--- a/tallerRmarkdown-IPOEnero2022/taller-reprod-enero2022.html
+++ b/tallerRmarkdown-IPOEnero2022/taller-reprod-enero2022.html
@@ -947,7 +947,7 @@ class: inverse
 ## Abriendo la sesión de RStudio como proyecto
 
 &lt;br&gt;
-- identificar en la carpeta respectiva el archibo .Rproj
+- identificar en la carpeta respectiva el archivo .Rproj
 
 - ejecutar y se abre R / RStudio desde ese directorio como raíz
 
