--- a/Ibero-MEX-Jun2022/iberomex2022.html
+++ b/Ibero-MEX-Jun2022/iberomex2022.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Taller LISA Enero 2021</title>
+    <title>Ibero Ciencia Abierta</title>
     <meta charset="utf-8" />
     <meta name="author" content=".small[Juan Carlos Castillo    Departamento de Sociología - UCH / COES   ]" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -78,6 +78,11 @@ Sociología, Universidad de Chile]
 ]
 ]
 ]
+
+---
+class: center
+&lt;br&gt;
+![:scale 80%](https://jc-castillo.com/media/albums/gallery/standards.png)
 
 
 ---
