--- a/workshopelsoc-septiembre2022/workshopelsoc-sept2022.html
+++ b/workshopelsoc-septiembre2022/workshopelsoc-sept2022.html
@@ -534,6 +534,19 @@ Fuente: [lisa-coes.com/01componentes/](https://lisa-coes.com/01componentes/)
 &lt;!-- &lt;/iframe&gt; --&gt;
 
 ---
+
+## Ejemplo plantilla AsPredicted
+
+&lt;iframe src= osf1.html height='550' width=100% allowfullscreen='true'&gt; 
+&lt;/iframe&gt;
+
+---
+
+## Ejemplo plantilla datos secundarios
+
+&lt;iframe src= osf2.html height='550' width=100% allowfullscreen='true'&gt; 
+&lt;/iframe&gt;
+---
 class: middle
 
 .pull-left-narrow[
