--- a/reprod-repos-Vale-Junio20203/reprod-repos-Vale-Junio2023.html
+++ b/reprod-repos-Vale-Junio20203/reprod-repos-Vale-Junio2023.html
@@ -1195,7 +1195,7 @@ signo + en cuenta Github
 ]
 
 ---
-# 3. Clonar repo
+## 3. Clonar repo
 
 .pull-left[
 - En Github: obtener dirección para clonar: code &gt; local &gt; clone https
@@ -1209,23 +1209,14 @@ signo + en cuenta Github
 
 
 ---
-class: roja, middle, right
-
-# Contenidos
-
-## 1. Repaso sesion anterior (git)
-## 2. Github
-## 3. .yellow[Github &amp; RStudio]
-
----
-# 3. Clonar repo
+## 3. Clonar repo
 
 - En RStudio: File &gt; New Project &gt; Version Control &gt; Git
 .center[
 ![](https://cienciasocialabierta.netlify.app/slides/09-github/Rstudio_creategit.png)]
 
 ---
-# 3. Clonar repo
+## 3. Clonar repo
 
 .pull-left[
 - pegar URL copiado en paso anterior 
