--- a/tallerShiny-Enero2022/taller-shiny-enero2022.html
+++ b/tallerShiny-Enero2022/taller-shiny-enero2022.html
@@ -75,9 +75,9 @@ About macros.js: permite escalar las imágenes como [scale 50%](path to image), 
  
  .espaciosimple[
 .medium[Julio Iturra] &lt;br&gt;
-.small[Centro de Estudios de Conflicto y Cohesión Social]
+.small[Bremen International Graduate School of Social Sciences]
 &lt;br&gt;
-.small[[coes.cl/julio-iturra](https://coes.cl/integrantes/julio-iturra/)]
+.small[[bigsss-bremen.de/julio-iturra](https://www.bigsss-bremen.de/people/phd-fellows/julio-iturra)]
 ]
 ]
 ]
@@ -525,7 +525,7 @@ server &lt;- function(input, output) {
 * existen elementos de origen (_source_), conductores (_conductor_)  y de llegada (_endpoints_)
 
 .center[
-![:scale 60%](https://shiny.rstudio.com/images/reactivity_diagrams/roles.png)
+![:scale 60%](roles.png)
 ]
 
 --
@@ -535,7 +535,7 @@ server &lt;- function(input, output) {
 
 # sources y endpoints
 
-.center[![:scale 40%](https://shiny.rstudio.com/images/reactivity_diagrams/01_hello.png)]
+.center[![:scale 40%](source'endpoints.png)]
 
 
 * `Reactive source`: el input que proviene de la interfaz de usuario o `ui`
@@ -554,7 +554,7 @@ server &lt;- function(input, output) {
   - `Endpoint` solamente pueden ser child (pueden **ser** dependientes)
 
 
-.center[![:scale 40%](https://shiny.rstudio.com/images/reactivity_diagrams/conductor.png)]
+.center[![:scale 40%](https://shiny.posit.co/r/articles/build/reactivity-overview/conductor.png)]
 
 ---
 # Usemos reactives
@@ -1167,6 +1167,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
