update link y qr

--- a/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
+++ b/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
@@ -52,7 +52,7 @@ About macros.js: permite escalar las imágenes como [scale 50%](path to image), 
 .pull-left-narrow[
 
 .left[
-![:scale 45%](Herramientas UValpo2024.png) ![:scale 45%](logo-lisa.png)
+![:scale 45%](CongresoSociologia2024.png) ![:scale 45%](logo-lisa.png)
 
 ----
 ![:scale 40%](logo_facso.png) ![:scale 50%](logo-nudos.png)
@@ -153,7 +153,6 @@ class: roja bottom
 ---
 ## Este estudio
 
-* Muestreo:
 
 * Módulos:
   - Ciencia abierta
@@ -164,15 +163,13 @@ class: roja bottom
   
 * FormR
   
-* Link a encuesta: 
+* Link a encuesta: [.red[lisa-survey.formr.org]](https://lisa-survey.formr.org/)
 ---
 # Datos
 
 * Encuesta aplicada desde a la fecha
 
 * 70 respuestas completas
-
-* ...
 
 * [Tabla descriptiva de variables]
 
@@ -324,12 +321,12 @@ Más info:
 [![:scale 20%](octocat.png)](https://github.com/lisa-coes/)
 
 ---
-
+class: front middle center
 
 .pull-left-narrow[
 
 .left[
-![:scale 45%](Herramientas UValpo2024.png) ![:scale 45%](logo-lisa.png)
+![:scale 45%](CongresoSociologia2024.png) ![:scale 45%](logo-lisa.png)
 
 ----
 ![:scale 40%](logo_facso.png) ![:scale 50%](logo-nudos.png)
@@ -337,7 +334,6 @@ Más info:
 ![:scale 45%](logo-coes-cuadrado.png)
 
 ----
-class: front middle center 
 
 .small[**Congreso Chileno de Sociología**
 
@@ -365,7 +361,6 @@ Departamento de Sociología, Universidad de Chile]
 ]
 ]
 ]
-
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
