update desc table

--- a/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
+++ b/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
@@ -171,7 +171,31 @@ class: roja bottom
 
 * 70 respuestas completas
 
-* [Tabla descriptiva de variables]
+* Tabla descriptiva de variables
+
+
+```
+##                        Variable N Válidos Porcentaje
+## 1                   Sexo/Género        70           
+## 2                     ... Mujer        29        41%
+## 3                    ... Hombre        41        59%
+## 4                  Grupo etario        70           
+## 5              ... 28 a 34 años        10        14%
+## 6              ... 35 a 49 años        43        61%
+## 7             ... 50 o más años        17        24%
+## 8               Grado académico        70           
+## 9                  ... Magíster        15        21%
+## 10                ... Doctorado        55        79%
+## 11                Etapa carrera        70           
+## 12     ... Inicial (0 a 5 años)        11        16%
+## 13 ... Intermedia (6 a 15 años)        22        31%
+## 14      ... Avanzada (&gt;15 años)        37        53%
+## 15            Enfoque principal        68           
+## 16              ... Cualitativo        17        25%
+## 17                    ... Mixto        24        35%
+## 18             ... Cuantitativo        27        40%
+```
+
 
 ---
 class: roja bottom
