--- a/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
+++ b/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
@@ -171,30 +171,72 @@ class: roja bottom
 
 * 70 respuestas completas
 
-* Tabla descriptiva de variables
+---
+
+# Datos
 
 
-```
-##                        Variable N Válidos Porcentaje
-## 1                   Sexo/Género        70           
-## 2                     ... Mujer        29        41%
-## 3                    ... Hombre        41        59%
-## 4                  Grupo etario        70           
-## 5              ... 28 a 34 años        10        14%
-## 6              ... 35 a 49 años        43        61%
-## 7             ... 50 o más años        17        24%
-## 8               Grado académico        70           
-## 9                  ... Magíster        15        21%
-## 10                ... Doctorado        55        79%
-## 11                Etapa carrera        70           
-## 12     ... Inicial (0 a 5 años)        11        16%
-## 13 ... Intermedia (6 a 15 años)        22        31%
-## 14      ... Avanzada (&gt;15 años)        37        53%
-## 15            Enfoque principal        68           
-## 16              ... Cualitativo        17        25%
-## 17                    ... Mixto        24        35%
-## 18             ... Cuantitativo        27        40%
-```
+
+.small[
+<div class="container st-container"><table class="table table-striped table-bordered st-table st-table-striped st-table-bordered st-multiline ">
+  <thead>
+    <tr>
+      <th align="center" class="st-protect-top-border"><strong>No</strong></th>
+      <th align="center" class="st-protect-top-border"><strong>Variable</strong></th>
+      <th align="center" class="st-protect-top-border"><strong>Stats / Values</strong></th>
+      <th align="center" class="st-protect-top-border"><strong>Freqs (% of Valid)</strong></th>
+      <th align="center" class="st-protect-top-border"><strong>Valid</strong></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td align="center">1</td>
+      <td align="left">Sexo/G&#0233;nero
+[factor]</td>
+      <td align="left" style="padding:8;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">1. Mujer</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">2. Hombre</td></tr></table></td>
+      <td align="left" style="padding:0;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">29</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">41.4%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">41</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">58.6%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr></table></td>
+      <td align="center">70
+(100.0%)</td>
+    </tr>
+    <tr>
+      <td align="center">2</td>
+      <td align="left">Grupo etario
+[factor]</td>
+      <td align="left" style="padding:8;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">1. 28 a 34 a&#0241;os</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">2. 35 a 49 a&#0241;os</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">3. 50 o m&#0225;s a&#0241;os</td></tr></table></td>
+      <td align="left" style="padding:0;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">10</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">14.3%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">43</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">61.4%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">17</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">24.3%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr></table></td>
+      <td align="center">70
+(100.0%)</td>
+    </tr>
+    <tr>
+      <td align="center">3</td>
+      <td align="left">Grado acad&#0233;mico
+[factor]</td>
+      <td align="left" style="padding:8;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">1. Mag&#0237;ster</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">2. Doctorado</td></tr></table></td>
+      <td align="left" style="padding:0;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">15</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">21.4%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">55</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">78.6%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr></table></td>
+      <td align="center">70
+(100.0%)</td>
+    </tr>
+    <tr>
+      <td align="center">4</td>
+      <td align="left">Etapa carrera
+[factor]</td>
+      <td align="left" style="padding:8;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">1. Inicial (0 a 5 a&#0241;os)</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">2. Intermedia (6 a 15 a&#0241;os)</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">3. Avanzada (>15 a&#0241;os)</td></tr></table></td>
+      <td align="left" style="padding:0;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">11</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">15.7%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">22</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">31.4%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">37</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">52.9%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr></table></td>
+      <td align="center">70
+(100.0%)</td>
+    </tr>
+    <tr>
+      <td align="center">5</td>
+      <td align="left">Enfoque principal
+[factor]</td>
+      <td align="left" style="padding:8;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">1. Cualitativo</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">2. Mixto</td></tr><tr style="background-color:transparent"><td style="padding:0;margin:0;border:0" align="left">3. Cuantitativo</td></tr></table></td>
+      <td align="left" style="padding:0;vertical-align:middle"><table style="border-collapse:collapse;border:none;margin:0"><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">17</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">25.0%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">24</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">35.3%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr><tr style="background-color:transparent"><td style="padding:0 5px 0 7px;margin:0;border:0" align="right">27</td><td style="padding:0 2px 0 0;border:0;" align="left">(</td><td style="padding:0;border:0" align="right">39.7%</td><td style="padding:0 4px 0 2px;border:0" align="left">)</td></tr></table></td>
+      <td align="center">68
+(97.1%)</td>
+    </tr>
+  </tbody>
+</table></div>
+]
 
 
 ---
