corregir render presentacion

--- a/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
+++ b/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.html
@@ -4,11 +4,11 @@
     <title>Avance resultados encuesta LISA</title>
     <meta charset="utf-8" />
     <meta name="author" content=".small[Juan Carlos Castillo    Departamento de Sociología - UCH / COES   ]" />
-    <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
-    <script src="libs/tile-view/tile-view.js"></script>
-    <link href="libs/animate.css/animate.xaringan.css" rel="stylesheet" />
-    <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
+    <script src="congreso-sociologia-stgo-Mayo2024_files/header-attrs-2.21/header-attrs.js"></script>
+    <link href="congreso-sociologia-stgo-Mayo2024_files/tile-view-0.2.6/tile-view.css" rel="stylesheet" />
+    <script src="congreso-sociologia-stgo-Mayo2024_files/tile-view-0.2.6/tile-view.js"></script>
+    <link href="congreso-sociologia-stgo-Mayo2024_files/animate.css-3.7.2/animate.xaringan.css" rel="stylesheet" />
+    <script src="congreso-sociologia-stgo-Mayo2024_files/xaringanExtra-progressBar-0.0.1/progress-bar.js"></script>
     <link rel="stylesheet" href="custom_lisa.css" type="text/css" />
   </head>
   <body>
@@ -432,7 +432,7 @@ Departamento de Sociología, Universidad de Chile]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script src="https://multinivel.netlify.com/docpres/xaringan_custom/macros.js"></script>
+<script src="https://multinivel.netlify.app/docpres/xaringan_custom/macros.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "16:9",
 "highlightStyle": "github",
